--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ function renderPreview(data){
 }
 
 /* ====== Google Sheet integration ====== */
-const SHEET_WEBAPP_URL = "YOUR_GOOGLE_APPS_SCRIPT_WEBAPP_URL"; // <-- đổi thành URL Web App
+const SHEET_WEBAPP_URL = "https://script.google.com/macros/s/AKfycbymSl87xCfbAm7Si6j7TWtbpfe-KZ-cdc8aXjngL2vIfIwJjIiOEUAKflhwfwu0uHTq/exec"; // <-- đổi thành URL Web App
 
 function saveToGoogleSheet(invoice){
   fetch(SHEET_WEBAPP_URL, {
