--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
   </div>
 
 <script>
-const SHEET_WEBAPP_URL = 'YOUR_WEB_APP_URL_HERE'; // Thay bằng URL Web App Google Apps Script
+const SHEET_WEBAPP_URL = 'https://script.google.com/macros/s/AKfycbymSl87xCfbAm7Si6j7TWtbpfe-KZ-cdc8aXjngL2vIfIwJjIiOEUAKflhwfwu0uHTq/exec'; // Thay bằng URL Web App Google Apps Script
 
 function el(id){return document.getElementById(id)}
 
