--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 /* ======= sample owners data ======= */
 const OWNERS = [
   { id: 'owner1', name: 'Ngô Minh Hoàng', bank: 'Techcombank : 9694999999', contact: '0977.818.000', qrLink: 'https://chart.googleapis.com/chart?chs=200x200&cht=qr&chl=Techcombank%20%7C%209694999999' },
-  { id: 'owner2', name: 'Trần Thị A', bank: 'Vietcombank : 0123456789', contact: '0901.234.567', qrLink: 'https://chart.googleapis.com/chart?chs=200x200&cht=qr&chl=Vietcombank%20%7C%200123456789' },
+  { id: 'owner2', name: 'Nguyễn Văn Diễn ', bank: 'Techcombank : 2255992888', contact: 'Zalo.me/0858925890', qrLink: 'https://chart.googleapis.com/chart?chs=200x200&cht=qr&chl=Vietcombank%20%7C%200123456789' },
   { id: 'owner3', name: 'Lê Văn B', bank: 'BIDV : 9876543210', contact: '0912.345.678', qrLink: '' }
 ];
 function el(id){return document.getElementById(id)}
