--- a/index.html
+++ b/index.html
@@ -255,9 +255,12 @@
 <script>
 /* ======= sample owners data ======= */
 const OWNERS = [
-  { id: 'owner1', name: 'Ngô Minh Hoàng', bank: 'Techcombank : 9694999999', contact: '0977.818.000', qrLink: 'https://chart.googleapis.com/chart?chs=200x200&cht=qr&chl=Techcombank%20%7C%209694999999' },
-  { id: 'owner2', name: 'Nguyễn Văn Diễn ', bank: 'Techcombank : 2255992888', contact: 'Zalo.me/0858925890', qrLink: 'https://chart.googleapis.com/chart?chs=200x200&cht=qr&chl=Vietcombank%20%7C%200123456789' },
-  { id: 'owner3', name: 'Lê Văn B', bank: 'BIDV : 9876543210', contact: '0912.345.678', qrLink: '' }
+  { id: 'owner1', name: 'Ngô Minh Hoàng', bank: 'Techcombank : 9694999999', contact: '0977.818.000', qrLink: 'https://i.postimg.cc/4yhDx4cW/hoang.jpg' },
+  { id: 'owner2', name: 'Nguyễn Văn Diễn ', bank: 'Techcombank : 2255992888', contact: 'Zalo.me/0858.925.890', qrLink: 'https://i.postimg.cc/MT0R2VPR/dien.jpg' },
+  { id: 'owner3', name: 'Phạm Trung Thành', bank: 'Vietcombank : 0491000106412', contact: '098.6368.224', qrLink: 'https://i.postimg.cc/9F0416hy/thanh.png' }
+    { id: 'owner2', name: 'Đỗ Hồng Phương ', bank: 'MB Bank : 2255992888', contact: '0982.421.468', qrLink: 'https://i.postimg.cc/Gmh1kRnH/a-ph-ng.jpg' },
+    { id: 'owner2', name: 'Quách Hoàng Chinh ', bank: 'Techcombank : 190333180198012', contact: 'xxxx', qrLink: 'https://i.postimg.cc/pVFVTPRz/a-chinh.jpg' },
+        { id: 'owner2', name: 'Nguyễn Vân Cương ', bank: 'xxxx : 12345678', contact: 'xxxx', qrLink: 'https://i.postimg.cc/MT0R2VPR/dien.jpg' },
 ];
 function el(id){return document.getElementById(id)}
 const ownerSelect = el('ownerSelect');
