--- a/index.html
+++ b/index.html
@@ -315,7 +315,13 @@
             <div id="pvOwnerBank"></div>
             <div id="pvOwnerContact"></div>
           </div>
-          <img id="pvQR" alt="QR" style="width:110px;height:110px;border:1px solid #eee;object-fit:cover">
+          <div style="text-align:center;">
+  <img id="pvQR" alt="QR" style="width:110px;height:110px;border:1px solid #eee;object-fit:cover">
+  <div style="color:#c40000; font-size:11px; margin-top:6px; line-height:1.4; font-weight:500; max-width:110px; margin-left:auto; margin-right:auto;">
+    Quý khách vui lòng chụp lại ảnh chuyển khoản để tiện đối chiếu
+  </div>
+</div>
+
         </div>
         
         <p class="center" style="margin-top:16px; font-weight:700;">TRÂN TRỌNG CẢM ƠN</p>
