--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
               <td id="pvTotal" class="text-right bold"></td>
             </tr>
             <tr>
-              <td colspan="6" class="red bold">BẰNG CHỮ: <span id="pvInWords"></span></td>
+              <td colspan="6" class="red bold">Bằng Chữ : <span id="pvInWords"></span></td>
             </tr>
           </tfoot>
         </table>
