--- a/index.html
+++ b/index.html
@@ -640,6 +640,9 @@ function sendToGoogleSheets(invoice) {
     });
   }
   
+  // Lấy tên chủ TK hiện tại
+  const ownerName = el('ownerName').value.trim();
+  
   const data = {
     datetime: new Date().toLocaleString('vi-VN'),
     invoiceId: invoice.invoiceId,
@@ -653,7 +656,8 @@ function sendToGoogleSheets(invoice) {
     discount: discountText,
     warranty: warrantyText,
     total: totalAmount,
-    note: invoice.ghichu
+    note: invoice.ghichu,
+    owner: ownerName  // ← THÊM DÒNG NÀY
   };
   
   console.log('📦 Dữ liệu:', data);
@@ -673,6 +677,7 @@ function sendToGoogleSheets(invoice) {
     console.error('❌ Lỗi:', error);
   });
 }
+
 
 const USERS = [ { username:'admin', password:'qwerty' } ];
 const loginContainer = el('login-container');
