--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 <button id="logout-btn">Đăng xuất</button>
 
 <div class="wrap">
-<h1>S-STORE - HÓA ĐƠN BÁN HÀNG & DỊCH VỤ</h1>
+<h1>S+ Store - HÓA ĐƠN BÁN HÀNG & DỊCH VỤ</h1>
 <p class="small center" style="margin-top:8px; margin-bottom:14px">SỐ 1 ngõ 50 LƯƠNG THẾ VINH - HÀ NỘI</p>
 <div class="grid">
   <div class="card no-print">
@@ -252,7 +252,7 @@
   <div class="card preview">
     <div id="previewArea">
       <div class="inv-header">
-        <div class="inv-title">S-STORE - ĐIỆN THOẠI ĐIỆN MÁY CHÍNH HÃNG</div>
+        <div class="inv-title">S+ Store - ĐIỆN THOẠI ĐIỆN MÁY CHÍNH HÃNG</div>
         <div class="inv-sub">SỐ 1 ngõ 50 LƯƠNG THẾ VINH - HÀ NỘI</div>
         <div style="margin-top:6px; font-weight:700; font-size:18px;">HÓA ĐƠN BÁN HÀNG & DỊCH VỤ</div>
       </div>
