--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
           <b style="color:#b35d00">* Lưu Ý/Bảo Hành:</b>
           <ul>
             <li>Bao check đảm bảo đúng tình trạng khi xuất bán</li>
-            <li id="warrantyLine">Bảo hành theo thời gian ghi trên hóa đơn (Không bảo hành hình thức: rơi vỡ, vào nước...)</li>
+            <li id="warrantyLine">Bảo hành theo thời gian ghi trên hóa đơn (Màn hình BH cảm ứng, không bảo hành hiển thị, ngoại quan: Vỡ - Sọc - Nháy - Mực - Chết Đen...)</li>
             <li id="imeiLine">Thiết bị bảo hành đúng IMEI, còn tem BH, chưa can thiệp bên thứ ba</li>
             <li>Quay video thể hiện tem bảo hành và máy còn nguyên vẹn chưa có can thiệp bên thứ 3 để đảm bảo quyền lợi</li>
           </ul>
