--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ function createProductCard(){
       <button type="button" class="btn btn-danger btn-sm" onclick="removeProductCard('${cardId}')">× Xóa</button>
     </div>
     <label>Tên sản phẩm / Dịch vụ</label>
-    <input type="text" class="product-name" placeholder="Ví dụ: iPhone 13 128GB Trắng">
+    <input type="text" class="product-name" placeholder="Ví dụ: iPhone 17 Promax 2TB Cam">
     <label>IMEI / Ghi chú</label>
     <input type="text" class="product-imei" placeholder="Số IMEI hoặc ghi chú">
     <div class="row">
