--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ const OWNERS = [
   { id: 'owner2', name: 'Nguyễn Văn Diễn ', bank: 'Techcombank : 2255992888', contact: '0858.925.890', qrLink: 'https://i.postimg.cc/MT0R2VPR/dien.jpg' },
   { id: 'owner3', name: 'Phạm Trung Thành', bank: 'Vietcombank : 0491000106412', contact: '098.6368.224', qrLink: 'https://i.postimg.cc/9F0416hy/thanh.png' },
   { id: 'owner4', name: 'Đỗ Hồng Phương ', bank: 'MB Bank : 8922228688888', contact: '0982.421.468', qrLink: 'https://i.postimg.cc/Gmh1kRnH/a-ph-ng.jpg' },
-  { id: 'owner5', name: 'Quách Hoàng Chinh ', bank: 'Techcombank : 190333180198012', contact: 'xxxx', qrLink: 'https://i.postimg.cc/pVFVTPRz/a-chinh.jpg' },
+  { id: 'owner5', name: 'Quách Hoàng Chinh ', bank: 'Techcombank : 190333180198012', contact: '0979.144.688', qrLink: 'https://i.postimg.cc/pVFVTPRz/a-chinh.jpg' },
   { id: 'owner6', name: 'Nguyễn Vân Cương ', bank: 'xxxx : 12345678', contact: 'xxxx', qrLink: 'https://i.postimg.cc/MT0R2VPR/dien.jpg' },
 ];
 
